# nascav2

./: .cproject  .gitignore  .project  README  README.md  copyscript.sh  setup.sh
code/: CMakeLists.txt
code/AAA/: AAAFactory.h  AAAModule.h  CMakeLists.txt  ConversationInterface.h
code/AAA/include/: AAAFactory.h  AAAModule.h  AAAModuleRegister.h  AlwaysAllow.h  ConversationInterface.h  LoginPass.h
code/AAA/src/: AAAFactory.cpp  AAAModule.cpp  AlwaysAllow.cpp  ConversationInterface.cpp  LoginPass.cpp
code/Base/: CMakeLists.txt  DataChannel.cpp  DataConsumerFactory.cpp  DataConsumerFactory.h  DataPortion.h  DataProvider.cpp  DataProviderFactory.cpp  MyNascaMain.h
code/Base/include/: Client.h  ClientSession.h  ConfigurationParser.h  DataChannel.h  DataConsumer.h  DataConsumerFactory.h  DataConsumerRegister.h  DataFile.h  DataPortion.h  DataProvider.h  DataProviderFactory.h  DataProviderRegister.h  DefaultTcpProvider.h  Log.h  MyNascaMain.h  MyNscaMain.h  ReadPortion.h  ToIcingaWritter.h  ToScreenPrinter.h
code/Base/src/: Client.cpp  ClientSession.cpp  ConfigurationParser.cpp  DataChannel.cpp  DataConsumer.cpp  DataConsumerFactory.cpp  DataFile.cpp  DataPortion.cpp  DataProvider.cpp  DataProviderFactory.cpp  DefaultTcpProvider.cpp  Log.cpp  MyNascaMain.cpp  MyNscaMain.cpp  ReadPortion.cpp  ToIcingaWritter.cpp  ToScreenPrinter.cpp  main.cpp
code/Cryptographic/: CMakeLists.txt  SymetricAlgorithm.cpp  SymetricAlgorithm.h
code/Cryptographic/include/: AESAlgorithmCBCMode.h  AsymetricAlgorithm.h  AsymetricAlgorithmRegister.h  CryptographicFactory.h  HashAlgorithm.h  HashAlgorithmRegister.h  RSAAlgorithmOAEPUsingSHA.h  RSASSA_PKCSv15_SHA256.h  SHA256Algorithm.h  SignAlgorithm.h  SignAlgorithmRegister.h  SymetricAlgorithm.h  SymetricAlgorithmRegister.h
code/Cryptographic/src/: AESAlgorithmCBCMode.cpp  AsymetricAlgorithm.cpp  CryptographicFactory.cpp  HashAlgorithm.cpp  RSAAlgorithmOAEPUsingSHA.cpp  RSASSA_PKCSv15_SHA256.cpp  SHA256Algorithm.cpp  SignAlgorithm.cpp  SymetricAlgorithm.cpp  mainTest.cpp
code/FactoryRegistration/: main.cpp
code/FactoryRegistration/include/: FactoryRegistrator.h  RegistrationHelper.h  Registrator.h
code/IcingaSenderModule/: CMakeLists.txt  IcingaSender.cpp  IcingaSender.h
code/IcingaSenderModule/include/: IcingaSender.h
code/IcingaSenderModule/src/: IcingaSender.cpp
code/Logger/: CMakeLists.txt
code/Logger/include/: LogEntry.h  Logger.h
code/Logger/src/: Logger.cpp  main.cpp
code/TcpStandardModule/: CMakeLists.txt  ClientCommunication.h  ClientConnection.cpp  ClientConnection.h  TcpReceiver.cpp
code/TcpStandardModule/include/: AdditionalThread.h  AuthConversation.h  ClientAuthorizer.h  ClientCommunication.h  ClientCommunicationFactory.h  ClientConnection.h  ConnectionManager.h  CryptographyInitializer.h  LogsTransmitter.h  MessageCipher.h  MessageCodes.h  MessageDecorator.h  MessageEndpointTcp.h  MessageFormer.h  MessageHasher.h  MessageSigner.h  MessageSink.h  Session.h  SessionInitializer.h  SessionPart.h  TcpReceiver.h  TcpServer.h
code/TcpStandardModule/src/: AdditionalThread.cpp  AuthConversation.cpp  ClientAuthorizer.cpp  ClientCommunication.cpp  ClientCommunicationFactory.cpp  ClientConnection.cpp  ConnectionManager.cpp  CryptographyInitializer.cpp  LogsTransmitter.cpp  MessageCipher.cpp  MessageCodes.cpp  MessageDecorator.cpp  MessageEndpointTcp.cpp  MessageFormer.cpp  MessageHasher.cpp  MessageSigner.cpp  MessageSink.cpp  Session.cpp  SessionInitializer.cpp  SessionPart.cpp  TcpReceiver.cpp  TcpServer.cpp
code/doxygen/: Doxyfile.in
code/protocolTests/: CMakeLists.txt
code/protocolTests/src/: main.cpp
configExample/: config.xml  new_config.xml  some_example.xml
configExample/keys/: Providers::Provider1.priv  Providers::Provider1.pub  Providers::Provider2.priv  Providers::Provider2.pub
doc/: Komunikaty+ kryptografia.docx  Protokol przekazywania danych.docx  inz.eap
